--- a/HomeForSRI.html
+++ b/HomeForSRI.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loisirs</title>
+    <title>Home</title>
     <style>
         
 
@@ -227,3 +227,4 @@ form>*{
 </body>
 
 </html>
+
